--- a/mb/src/assets/app.scss
+++ b/mb/src/assets/app.scss
@@ -18,7 +18,7 @@ body{
         font-size: 24px;
         line-height: 29px;
         letter-spacing: 0.02em;
-        margin-top: -700px;
+        margin-top: -800px;
 
             .title1{
                 color: #FF8F71;
@@ -35,8 +35,7 @@ body{
                 align-items: center;
                 width: 375px;
                 height: 84px;
-                border: 2px solid white;
-                margin-top: 150px;
+                margin-top: 200px;
                 padding: 0;
             
                 
@@ -44,16 +43,13 @@ body{
                     display: flex;
                     list-style-type: none;
 
-                    img{
+                    .img{
                         display: flex;
-                        width: 24px;
-                        height: 26px; 
+                        width: 40px;
+                        height: 40px; 
                         margin-left: 40px;
                         margin-right: 40px;
-                        background-color: white;
-                        
-                        
-                    
+                        color: grey;
                     }
                 
                 }
