--- a/mb/src/assets/app.scss
+++ b/mb/src/assets/app.scss
@@ -1,29 +1,128 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap');
 
 $backgroundpage: #15141F;
+$colorbutton: #FF8F71;
 $fonttitle: "Lato", sans-serif;
 
 body{
     display: flex;
-    background-color:$backgroundpage;
+    background-color: $backgroundpage;
     font-family: $fonttitle;
+    border: 2px solid white;
     width: 375px;
     height: 812px;
-
+    .home{
+        background-color: $backgroundpage;
+    
     .title{
         display: flex;
         flex-direction: row;
         align-items: flex-end;
         color: white;
         font-size: 24px;
+        font-weight: 400;
         line-height: 29px;
         letter-spacing: 0.02em;
-        margin-top: -800px;
+        margin-top: -750px;
+        margin-left: 24px;
 
             .title1{
                 color: #FF8F71;
             }
     }
+    .affiche{
+        display: flex;
+        width: 100%;
+        height: 191px;
+        margin-left: 24px;
+        margin-top: 0px;
+        border-radius: 30px;
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: auto;
+
+        .linkspotlight{
+         display: flex;
+         flex-direction: row;
+         justify-content: center;
+         align-self: flex-end;
+         text-decoration: none;
+         border: 1px solid white;
+         border-radius: 20px;
+         background-color: white;
+        //opacity: 0.3;
+         //filter: blur(2px);
+         width: 211px;
+         height: 62px;
+         margin-bottom: 10px;
+         margin-left: 20px;
+         
+        }
+        .play{
+            display: flex;
+            align-self: flex-end;
+            text-decoration: none;
+            color: gray;
+            width: 40px;
+            height: 40px;
+        }
+        .textspotlight{
+            display: flex;
+            flex-direction: column;
+            color: black;
+
+            .moviespotlight{
+                display: flex;
+                font-size: 12px;
+                font-family: $fonttitle;
+                line-height: 14px;
+                letter-spacing: 0.02em;
+                margin-bottom: 0;
+                margin-top: 13px;
+            }
+            .titlemoviespotlight{
+                display: flex;
+                font-family: $fonttitle;
+                font-size: 16px;
+                line-height: 19px;
+                letter-spacing: 0.02em;
+                margin-top: 0;
+            }
+        }
+       
+    }
+    .titletrending{
+        display: flex;
+        position: absolute;
+        width: 99px;
+        height: 29px;
+        margin-left: 24px;
+        margin-top: 30px;
+        color: white;
+        font-family: $fonttitle;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 28.8px;
+        letter-spacing: 0.02em
+       
+    }
+}
+.carouseltrending{
+    display: flex;
+    width: 100%;
+    margin-left: 30px;
+    
+    .moviecard{
+        display: flex;
+        margin-top: 55px;
+
+        .imgtrending{
+            width: 180px;
+            height: 359px;
+        
+        }
+    }
+}
     .navigation{
         display: flex;
         margin-top: 500px;
@@ -31,25 +130,32 @@ body{
             .icones{
                 display: flex;
                 flex-direction: row;
-                justify-content: space-around;
+                justify-content: space-between;
                 align-items: center;
-                width: 375px;
+                width: 280px;
                 height: 84px;
                 margin-top: 200px;
                 padding: 0;
-            
-                
+                margin-left: 40px;
+                margin-bottom: -50px;
+               
                 li{
                     display: flex;
                     list-style-type: none;
 
                     .img{
                         display: flex;
-                        width: 40px;
-                        height: 40px; 
-                        margin-left: 40px;
-                        margin-right: 40px;
-                        color: grey;
+                        width: 30px;
+                        height: 30px; 
+                        color: grey;  
+                        cursor: pointer;
+                        padding: 0;
+                        margin: 0;
+
+                        .img:hover{
+                            color: $colorbutton;
+                            
+                        }
                     }
                 
                 }
