--- a/mb/src/css/app.css
+++ b/mb/src/css/app.css
@@ -1,15 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap");
 body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background-color: #15141F;
   font-family: "Lato", sans-serif;
+  border: 2px solid white;
   width: 375px;
   height: 812px;
 }
 
-body .title {
+body .home {
+  background-color: #15141F;
+}
+
+body .home .title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,13 +27,135 @@ body .title {
           align-items: flex-end;
   color: white;
   font-size: 24px;
+  font-weight: 400;
   line-height: 29px;
   letter-spacing: 0.02em;
-  margin-top: -800px;
+  margin-top: -750px;
+  margin-left: 24px;
 }
 
-body .title .title1 {
+body .home .title .title1 {
   color: #FF8F71;
+}
+
+body .home .affiche {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 191px;
+  margin-left: 24px;
+  margin-top: 0px;
+  border-radius: 30px;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+body .home .affiche .linkspotlight {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 20px;
+  background-color: white;
+  width: 211px;
+  height: 62px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+body .home .affiche .play {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  text-decoration: none;
+  color: gray;
+  width: 40px;
+  height: 40px;
+}
+
+body .home .affiche .textspotlight {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: black;
+}
+
+body .home .affiche .textspotlight .moviespotlight {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 12px;
+  font-family: "Lato", sans-serif;
+  line-height: 14px;
+  letter-spacing: 0.02em;
+  margin-bottom: 0;
+  margin-top: 13px;
+}
+
+body .home .affiche .textspotlight .titlemoviespotlight {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.02em;
+  margin-top: 0;
+}
+
+body .home .titletrending {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  width: 99px;
+  height: 29px;
+  margin-left: 24px;
+  margin-top: 30px;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28.8px;
+  letter-spacing: 0.02em;
+}
+
+body .carouseltrending {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-left: 30px;
+}
+
+body .carouseltrending .moviecard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 55px;
+}
+
+body .carouseltrending .moviecard .imgtrending {
+  width: 180px;
+  height: 359px;
 }
 
 body .navigation {
@@ -46,15 +173,18 @@ body .navigation .icones {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 375px;
+  width: 280px;
   height: 84px;
   margin-top: 200px;
   padding: 0;
+  margin-left: 40px;
+  margin-bottom: -50px;
 }
 
 body .navigation .icones li {
@@ -68,10 +198,15 @@ body .navigation .icones li .img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 40px;
-  height: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
+  width: 30px;
+  height: 30px;
   color: grey;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+
+body .navigation .icones li .img .img:hover {
+  color: #FF8F71;
 }
 /*# sourceMappingURL=app.css.map */
