--- a/mb/src/css/home.css
+++ b/mb/src/css/home.css
@@ -1,17 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap");
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #15141F;
-  font-family: "Lato", sans-serif;
-  border: 2px solid white;
-  width: 375px;
-  height: 812px;
+  margin: 0;
+  padding: 0;
 }
 
 body .home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #15141F;
+  font-family: "Lato", sans-serif;
+  border: 2px solid white;
+  height: 812px;
+  width: 375px;
 }
 
 body .home .affiche {
@@ -108,7 +113,7 @@ body .home .titletrending {
   width: 99px;
   height: 29px;
   margin-left: 24px;
-  margin-top: 30px;
+  margin-top: 300px;
   color: white;
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -121,7 +126,12 @@ body .carouseltrending {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 370px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 359px;
+  margin-top: 5px;
 }
 
 body .carouseltrending .linkmovies {
@@ -136,6 +146,7 @@ body .carouseltrending .linkmovies .moviecard {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 300px;
   margin-top: 55px;
 }
 
@@ -157,7 +168,7 @@ body .carouseltrending .linkmovies .moviecard .scoremovie {
           flex-direction: column;
   -ms-flex-line-pack: center;
       align-content: center;
-  margin-left: 150px;
+  margin-left: 120px;
   margin-top: 15px;
   position: absolute;
   width: 77px;
@@ -220,11 +231,10 @@ body .carouseltrending .linkmovies .titlemovie {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 260px;
-  width: 226px;
+  margin-top: 220px;
+  width: 180px;
   height: 81.2px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 30px;
   border: 1px solid white;
   border-radius: 20px;
   font-size: 16px;
@@ -233,4 +243,4 @@ body .carouseltrending .linkmovies .titlemovie {
   -webkit-backdrop-filter: blur(4.81px);
           backdrop-filter: blur(4.81px);
 }
-/*# sourceMappingURL=app.css.map */
+/*# sourceMappingURL=home.css.map */
