--- a/mb/src/assets/discover.scss
+++ b/mb/src/assets/discover.scss
@@ -6,9 +6,8 @@ $fonttitle: "Lato", sans-serif;
 $colorgender: #E2E2E2;
 
 body{
-    display: flex;
-
-
+    
+    
     .discover{
        display: flex;
        flex-direction: column;
@@ -31,8 +30,6 @@ body{
                 color: white;
                 width: 24px;
                 height: 24px;
-
-
             }
             .inputsearch{
                 display: flex;
@@ -54,24 +51,56 @@ body{
 
             }
         }
-        .gender{
-            display: flex;
-         
                 .listgender{
+
                     display: flex;
+                    flex-direction: row;
                     font-family: $fonttitle;
-                    color: $colorgender;
-                    list-style-type: none;
                     font-size: 16px;
-                    margin-right: 10px; 
-                    margin-top: 100px;
+                    margin-right: 10px;
                     overflow-x: scroll;
-                    
-                    .genderli{
-                        padding: 10px
-                    }
+                    scrollbar-width: none;
+                    &::-webkit-scrollbar{display:none};
+                    cursor: pointer;
+
+                     .genderli{
+                        display: flex;
+                        width: 40px;
+                        height: 40px;
+                        text-decoration: none;
+                        color: $colorgender;
+                       
+                     }
+                     .genderli:hover{
+                         color: $colorbutton;
+                     }
                 }
-        }
+         .moviesall{
+             display: flex;
+             flex-wrap: wrap;
+             width: 350px;
+             height: 500px;
+             margin-top: 150px;
+
+             .link{
+                 display: flex;
+                 flex-direction: column;
+                 text-decoration: none;
+                 
+                 .imageslist{
+                     display: flex;
+                     width: 154px;
+                     height: 215px;
+                     .img{
+                         width: 100%;
+                     }
+                     .alltitlemovies{
+                        
+                     }
+                 }
+             }
+         } 
     }
-}      
+}
+     
 
