--- a/mb/src/css/discover.css
+++ b/mb/src/css/discover.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 body .discover {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -84,26 +78,71 @@ body .discover .search ::placeholder {
   font-size: 14px;
 }
 
-body .discover .gender {
+body .discover .listgender {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-body .discover .gender .listgender {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   font-family: "Lato", sans-serif;
-  color: #E2E2E2;
-  list-style-type: none;
   font-size: 16px;
   margin-right: 10px;
-  margin-top: 100px;
   overflow-x: scroll;
+  scrollbar-width: none;
+  cursor: pointer;
 }
 
-body .discover .gender .listgender .genderli {
-  padding: 10px;
+body .discover .listgender::-webkit-scrollbar {
+  display: none;
+}
+
+body .discover .listgender .genderli {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  text-decoration: none;
+  color: #E2E2E2;
+}
+
+body .discover .listgender .genderli:hover {
+  color: #FF8F71;
+}
+
+body .discover .moviesall {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 350px;
+  height: 500px;
+  margin-top: 150px;
+}
+
+body .discover .moviesall .link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-decoration: none;
+}
+
+body .discover .moviesall .link .imageslist {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 154px;
+  height: 215px;
+}
+
+body .discover .moviesall .link .imageslist .img {
+  width: 100%;
 }
 /*# sourceMappingURL=discover.css.map */
