--- a/mb/src/assets/details.scss
+++ b/mb/src/assets/details.scss
@@ -14,7 +14,7 @@ body{
      position: relative;
      background-color: $backgroundpage;
      font-family: $fonttitle;
-     height: 812px;
+     height: 900px;
      width: 375px;
     
         .video{
@@ -40,8 +40,10 @@ body{
             .playicon {
                  display: flex;
                  position: absolute;
+                 top: 10px;
+                 left: 150px;
                  align-self: center;
-                 margin-top:100px;
+                 margin-top:80px;
                  color: white;
                  cursor: pointer;
             }
@@ -52,6 +54,7 @@ body{
         .title{
             display: flex;
             flex-direction: column;
+            margin-top: -30px;
             align-self: center;
             align-items: flex-start;
             font-family: $fonttitle;
@@ -90,13 +93,11 @@ body{
                 flex-direction: row;
                 font-weight: normal;
                 color: #BCBCBC;
-                margin-top: -20px;
                 margin-bottom: 5px;
             
                 .timedetails{
                     display: flex;
-                    margin-top: 20px;
-
+                
                     .timeicon{
                         display: flex;
                         margin-top: 17px;
@@ -109,7 +110,6 @@ body{
                 }
                 .votedetails{
                     display: flex;
-                    margin-top: 20px;
                     margin-left: 20px;
 
                     .star{
@@ -212,7 +212,6 @@ body{
             align-self: center;
             align-items: flex-start;
             font-family: $fonttitle;
-            border-bottom: 1px solid #515151;
             width: 320px;
             color: white;
             margin-top: -5px;
@@ -243,6 +242,82 @@ body{
                     color: $backgroundpage;
                 }
             }
+        }
+        .relatedmovies{
+            display: flex;
+            position: relative;
+            flex-direction: column;
+            align-self: center;
+            font-family: $fonttitle;
+            color: white;
+            width: 320px;
+            height: 230px;
+            margin-bottom: 10px;
+          
+
+            .relatedtitle{
+                display: flex;
+                position: absolute;
+                font-size: 16px;
+                font-weight: 500;
+               
+            }
+            .carousel{
+                display: flex;
+                position: absolute;
+                top: 60px;
+                height: 250px ;
+                width: 330px;
+                margin-top: 20px;
+             
+             
+                .linkmoviesrelated{
+                    display: flex;
+                    text-decoration: none;
+                
+                    .imagemoviesrelated{
+                        display: flex;
+                        border-radius: 20px;
+                       
+                        
+                        img{
+                            display: flex;
+                            border-radius: 20px;
+                            height: 200px;
+                            width: 250px;
+                        }
+                    }
+                }
+                .infosmovie{
+                    display: flex;
+                    position: absolute;
+                    font-family: $fonttitle;
+                    top: 100px;
+                 
+                    font-size: 12px;
+                    width: 250px;
+                    flex-direction: column;
+                    margin-top: 50px;
+
+                    .moviesrelatedtitle{
+                        display: flex;
+                        color: white;
+                        margin-left: 120px;
+                        margin-top: -10px;
+                       
+                    }
+                    .moviesrelateddate{
+                         display: flex;
+                        color: white;
+                        margin-top: -10px;
+                        margin-left: 130px;
+                      
+                    }
+
+                   
+                }  
+            }
+
         }
     }
 }
