--- a/mb/src/assets/home.scss
+++ b/mb/src/assets/home.scss
@@ -14,34 +14,46 @@ body{
         background-color: $backgroundpage;
         font-family: $fonttitle;
         border: 2px solid white;
-        height: 812px;
+        height: 900px;
         width: 375px;
        
    
     .affiche{
         display: flex;
+        flex-direction: column;
         width: 100%;
         height: 191px;
         margin-top: 0px;
+        overflow: hidden;
         border-radius: 30px;
         background-position: top;
         background-repeat: no-repeat;
         background-size: auto;
-
+        
+        .imagetrending{
+            display: flex;
+            align-self: center;
+            border-radius: 20px;
+            width: 300px;
+            height: 191px;
+            margin-right: 20px;
+           
+        }
         .linkspotlight{
          display: flex;
          flex-direction: row;
+         font-weight: normal;
          justify-content: center;
          align-self: flex-end;
          text-decoration: none;
          border: 1px solid white;
          border-radius: 20px;
          background:rgba(218, 218, 218, 0.3) ;
-         backdrop-filter: blur(4.81px);
+         backdrop-filter: blur(2px);
          width: 211px;
          height: 62px;
-         margin-bottom: 10px;
-         margin-left: 50px;
+         margin-top: -70px;
+         margin-left: 40px;
 
          
         }
@@ -52,6 +64,13 @@ body{
             color: gray;
             width: 40px;
             height: 40px;
+            margin-right: 30px;
+            .iconplay{
+                display: flex;
+            }
+            .iconplay:hover{
+                color: $colorbutton;
+            }
         }
         .textspotlight{
             display: flex;
@@ -86,7 +105,7 @@ body{
         width: 99px;
         height: 29px;
         margin-left: 24px;
-        margin-top: 300px;
+        margin-top: 320px;
         color: white;
         font-family: $fonttitle;
         font-weight: 400;
@@ -99,30 +118,26 @@ body{
 .carouseltrending{
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 350px;
     height: 359px;
-    margin-top: 5px;
+    margin-top: 25px;
+  
    
-
-
     .linkmovies{
         display: flex;
         position: relative;
         text-decoration: none;
-        
-        
     
         .moviecard{
             display: flex;
-            height: 300px;
+            height: 310px;
             margin-top: 55px;
-            
-            
-
+           
             .imgtrending{
                 display: flex;
                 position: relative;
-                height: 359px;
+                height: 310px;
+                border-radius: 20px;
             
             }
         
@@ -130,7 +145,7 @@ body{
             display: flex;
             flex-direction: column;
             align-content: center;
-            margin-left: 120px;
+            margin-left: 115px;
             margin-top: 15px;
             position: absolute;
             width: 77px;
@@ -138,7 +153,7 @@ body{
             border: 1px solid white;
             border-radius: 10px;
             background:rgba(218, 218, 218, 0.3) ;
-            backdrop-filter: blur(4.81px);
+            backdrop-filter: blur(2.5px);
             
             
            
@@ -152,8 +167,10 @@ body{
             .group{
                 display: flex;
                 flex-direction: row;
+                justify-content: space-around;
                 margin-top: -10px;
                 padding-left: 10px;
+                
              
 
                 .staricon{
@@ -177,16 +194,16 @@ body{
             position: absolute;
             align-items: center;
             justify-content: center;
-            margin-top: 220px;
+            margin-top: 210px;
             width: 180px;
-            height: 81.2px;
-            margin-left: 30px;
+            height: 79px;
+            margin-left: 13px;
             border: 1px solid white;
             border-radius: 20px;
             font-size: 16px;
             color: white;
             background:rgba(218, 218, 218, 0.3) ;
-            backdrop-filter: blur(4.81px);
+            backdrop-filter: blur(2.5px);
         }
     }
 }
